--- a/index.html
+++ b/index.html
@@ -1,21 +1,35 @@
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Fashion Collection - Modern Clothing Store</title>
-    <meta name="description" content="Discover our latest fashion collection with premium clothing, modern styles, and affordable prices." />
+    <meta
+      name="description"
+      content="Discover our latest fashion collection with premium clothing, modern styles, and affordable prices."
+    />
     <meta name="author" content="Fashion Collection" />
 
-    <meta property="og:title" content="Fashion Collection - Modern Clothing Store" />
-    <meta property="og:description" content="Discover our latest fashion collection with premium clothing, modern styles, and affordable prices." />
+    <meta
+      property="og:title"
+      content="Fashion Collection - Modern Clothing Store"
+    />
+    <meta
+      property="og:description"
+      content="Discover our latest fashion collection with premium clothing, modern styles, and affordable prices."
+    />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta
+      property="og:image"
+      content="https://images.unsplash.com/photo-1596755094514-f87e34085b2c?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=8"
+    />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:site" content="@nhan_dev" />
+    <meta
+      name="twitter:image"
+      content="https://images.unsplash.com/photo-1565084888279-aca607ecce0c?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=80"
+    />
   </head>
 
   <body>
